--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
+    "react-router-dom": "^7.8.2",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/potrace": "^2.1.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-router-dom": "^5.3.3",
     "cross-env": "^7.0.3",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
