--- a/package.json
+++ b/package.json
@@ -15,28 +15,20 @@
     "express": "^5.1.0",
     "isbot": "^5.1.27",
     "morgan": "^1.10.0",
-    "potrace": "^2.1.8",
-    "potrace-wasm": "^1.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1",
-    "react-router-dom": "^7.8.2",
-    "sharp": "^0.34.3"
+    "react-router": "^7.7.1"
   },
   "devDependencies": {
-    "@netlify/vite-plugin-react-router": "^1.0.1",
     "@react-router/dev": "^7.7.1",
-    "@remix-run/netlify": "^1.19.3",
     "@tailwindcss/vite": "^4.1.4",
     "@types/compression": "^1.7.5",
     "@types/express": "^5.0.1",
     "@types/express-serve-static-core": "^5.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20",
-    "@types/potrace": "^2.1.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@types/react-router-dom": "^5.3.3",
     "cross-env": "^7.0.3",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
