--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,14 +1,13 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.vite.json" }
-  ],
+  "extends": "./tsconfig.json",
+  "include": ["server.js", "vite.config.ts"],
   "compilerOptions": {
-    "checkJs": true,
-    "verbatimModuleSyntax": true,
-    "skipLibCheck": true,
+    "composite": true,
     "strict": true,
-    "noEmit": true
+    "types": ["node"],
+    "lib": ["ES2022"],
+    "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "bundler"
   }
 }
