--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@react-router/express": "^7.7.1",
     "@react-router/node": "^7.7.1",
+    "@remix-run/node": "^2.17.0",
     "compression": "^1.7.5",
     "express": "^5.1.0",
     "isbot": "^5.1.27",
     "morgan": "^1.10.0",
+    "potrace": "^2.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1"
