--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express-serve-static-core": "^5.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20",
+    "@types/potrace": "^2.1.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "cross-env": "^7.0.3",
