--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "potrace": "^2.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-router": "^7.7.1",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
