--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "isbot": "^5.1.27",
     "morgan": "^1.10.0",
+    "posthog-js": "^1.320.0",
     "potrace": "^2.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
