--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@react-router/express": "^7.7.1",
     "@react-router/node": "^7.7.1",
     "@remix-run/node": "^2.17.0",
+    "canvg": "^4.0.3",
     "compression": "^1.7.5",
     "express": "^5.1.0",
+    "fflate": "^0.8.2",
     "isbot": "^5.1.27",
+    "jspdf": "^4.0.0",
     "morgan": "^1.10.0",
     "posthog-js": "^1.320.0",
     "potrace": "^2.1.8",
