feat: svg utilities
-Add more utilities to convert to svg format.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "isbot": "^5.1.27",
     "jspdf": "^4.0.0",
     "morgan": "^1.10.0",
+    "opentype.js": "^1.3.4",
+    "pdf-lib": "^1.17.1",
     "posthog-js": "^1.320.0",
     "potrace": "^2.1.8",
     "react": "^19.1.0",
